overflow fix

--- a/assets/main.css
+++ b/assets/main.css
@@ -420,6 +420,13 @@ a:active {
     display: none;
  }
 
+ .vgvg {
+     display: none;
+ }
+
+.bvc {
+    width: 100%;
+}
 @media screen and (max-width:640px){
 
     .bh {
@@ -444,3 +451,6 @@ a:active {
     }
 }
 
+section {
+    overflow: hidden;
+}
